# dec-number-sys

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  Taskfile.yml  build.rs  coverage.sh  rustfmt.toml
benches/: dec_context.rs  dec_number_add.rs  dec_quad_add.rs  dec_quad_init.rs
decNumber-icu-368/: decBasic.c  decNumber.c  decNumberLocal.h
src/: dec_common.rs  dec_context.rs  dec_context_c.rs  dec_conversion.rs  dec_conversion_c.rs  dec_double.rs  dec_double_c.rs  dec_number.rs  dec_number_c.rs  dec_quad.rs  dec_quad_c.rs  dec_single.rs  dec_single_c.rs  lib.rs
tests/: dec_common.rs  dec_context.rs  dec_conversion.rs  dec_double.rs  dec_number.rs  dec_quad.rs  dec_single.rs
