[package]
name = "dec-number-sys"
version = "0.0.28"
authors = ["Dariusz Depta <wisbery@users.noreply.github.com>"]
description = "Rust bindings for The decNumber C library by IBM Fellow Mike Cowlishaw"
documentation = "https://docs.rs/dec-number-sys"
repository = "https://github.com/wisbery/dec-number-sys.git"
keywords = ["decimal", "floating", "point", "arithmetic"]
categories = ["api-bindings"]
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
libc = "0.2.149"

[build-dependencies]
cc = "1.0.83"
